Veritabanı yapılandırması güncellendi